samples/_failures_safe/1761711739_6078b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8117855.c: In function ‘cleanup_compression_context’:
./samples/SAFE/__tmp_f8117855.c:141:9: error: expected ‘;’ at end of input
  141 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_f8117855.c:141:5: error: expected declaration or statement at end of input
  141 |     free
      |     ^~~~
